# perception-gpu-research

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  driver  example  ransac  ransac.cpp
include/: GLViewer.hpp  common.hpp  euclidean-cluster.hpp  pass-through.hpp  pcl.hpp  plane-ransac.hpp  test-filter.hpp
old/: example.cpp
ransac-issue/: 0000.pcd  0001.pcd  0002.pcd  0003.pcd  0004.pcd  0005.pcd  0006.pcd  0007.pcd  0008.pcd  0009.pcd  0010.pcd  0011.pcd  0012.pcd  0013.pcd  0014.pcd  0015.pcd  0016.pcd  0017.pcd  0018.pcd  0019.pcd  0020.pcd  0021.pcd  0022.pcd  0023.pcd  0024.pcd  0025.pcd  0026.pcd  0027.pcd  0028.pcd  0029.pcd  0030.pcd  0031.pcd  0032.pcd  0033.pcd  0034.pcd  0035.pcd  0036.pcd  0037.pcd  0038.pcd  0039.pcd  (+7 more)
src/: GLViewer.cpp  common.cu  driver.cpp  driver.cu  euclidean-cluster.cu  find-clear.cu  pass-through.cu  pcl.cpp  plane-ransac.cu  test-filter-f4.cu  test-filter.cu  test.cpp
